--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+
+/* Estilização do header que será igual em todas as páginas */
 header{
   background-color:#FBFBFB;
   height: 7rem;
@@ -31,6 +33,8 @@ header{
   font-family: 'Poppins', sans-serif;
 }
 
+
+/* Estilização do top-content da página home */
 .top-content{
   background-color: #F6C34A;
   background-image: url('./assets/background-hero.png');
@@ -65,6 +69,8 @@ header{
   border-radius: 0.3rem;
 }
 
+
+/* Estilização do middle-content da página home (sobre nós)*/
 .middle-content{
   background-color: #0E0E0E;
   padding: 15vh 20vw 10vh 20vw;
@@ -86,6 +92,8 @@ header{
   font-family: 'Open Sans', sans-serif;
 }
 
+
+/* Estilização do bottom-content da página home (depoimentos)*/
 .bottom-content{
   background-color: #0E0E0E;
   padding: 0 15vw 18vh 15vw;
@@ -94,7 +102,6 @@ header{
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
-
 }
 
 #titulo-bottom-content{
