--- a/style.css
+++ b/style.css
@@ -303,5 +303,28 @@ header{
 
 .area-adm-right-content{
   background-color: #F6C34A;
+  width: 75vw;
+  padding: 3rem 0;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  gap:5rem;
+}
+
+.area-adm-turmas-card{
+  background-color: #FFF;
+  display:flex;
+  flex-direction: column;
+  gap:1rem;
+  padding:1rem;
+  border-radius: 0.5rem;
+}
+
+.area-adm-conteudo-turma-linha{
+  font-size: 0.8rem;
+  font-family: 'Open Sans',sans-serif;
+  display: flex;
+  align-items: center;
+  gap:0.3rem;
 }
 
