--- a/style.css
+++ b/style.css
@@ -311,6 +311,41 @@ header{
   gap:5rem;
 }
 
+.area-adm-busca-container{
+  display:flex;
+  align-items: center;
+  height: 2.5rem;
+  border-radius: 0.5rem;
+}
+
+#area-adm-caixa-texto{
+  font-size: 0.9rem;
+  font-family: 'Open Sans',sans-serif;
+  font-weight: 700;
+  width: 20rem;
+  height: 100%;
+  padding-left: 1rem;
+  border-bottom-left-radius: 0.3rem;
+  border-top-left-radius: 0.3rem;
+  border:0px;
+}
+
+
+.area-adm-botao-buscar{
+  font-size: 1.2rem;
+  font-family: 'Poppins',sans-serif;
+  font-weight: 700;
+  height: 100%;
+  text-decoration: none;
+  background-color: #0E0E0E;
+  color: #F0F0F0;
+  padding: 0 2rem;
+  display:flex;
+  align-items: center;  
+  border-top-right-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
+}
+
 .area-adm-turmas-card{
   background-color: #FFF;
   display:flex;
