--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ header{
   display:flex;
   flex-direction: column;
   align-items: center;
-  gap:5rem;
+  gap:4rem;
 }
 
 .area-adm-busca-container{
@@ -355,11 +355,27 @@ header{
   border-radius: 0.5rem;
 }
 
+.area-adm-conteudo-turma{
+  display:flex;
+  flex-direction: column;
+  gap:0.2rem;
+}
+
 .area-adm-conteudo-turma-linha{
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-family: 'Open Sans',sans-serif;
   display: flex;
   align-items: center;
   gap:0.3rem;
+}
+
+.area-adm-turma-info{
+  font-weight: 700;
+}
+
+.area-adm-turmas-card h2{
+  font-family: 'Poppins',sans-serif;
+  font-size: 1.2rem;
+  text-align: center;
 }
 
