--- a/style.css
+++ b/style.css
@@ -304,6 +304,7 @@ header{
 .area-adm-right-content{
   background-color: #F6C34A;
   width: 75vw;
+  height: 90vh;
   padding: 3rem 0;
   display:flex;
   flex-direction: column;
