--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ header{
   display:flex;
   flex-direction: column;
   align-items: center;
-  gap:4rem;
+  gap:3rem;
 }
 
 .area-adm-busca-container{
@@ -347,28 +347,37 @@ header{
   border-bottom-right-radius: 0.3rem;
 }
 
+.area-adm-turmas-cards-container{
+  display:flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .area-adm-turmas-card{
   background-color: #FFF;
+  font-family: 'Open Sans',sans serif;
   display:flex;
   flex-direction: column;
-  gap:1rem;
-  padding:1rem;
+  align-items: flex-start;
+  gap:0.3rem;
+  padding:1rem 2rem;
   border-radius: 0.5rem;
 }
 
-.area-adm-conteudo-turma{
+/* .area-adm-conteudo-turma{
   display:flex;
   flex-direction: column;
   gap:0.2rem;
-}
+} */
 
-.area-adm-conteudo-turma-linha{
+/* .area-adm-conteudo-turma-linha{
   font-size: 0.9rem;
   font-family: 'Open Sans',sans-serif;
   display: flex;
   align-items: center;
   gap:0.3rem;
-}
+} */
 
 .area-adm-turma-info{
   font-weight: 700;
@@ -377,6 +386,7 @@ header{
 .area-adm-turmas-card h2{
   font-family: 'Poppins',sans-serif;
   font-size: 1.2rem;
-  text-align: center;
+  margin-bottom: 0.2rem;
+  align-self: center;
 }
 
