--- a/style.css
+++ b/style.css
@@ -349,6 +349,7 @@ header{
 
 .area-adm-turmas-cards-container{
   display:flex;
+  padding:0 4rem;
   gap: 1rem;
   justify-content: center;
   align-items: flex-start;
@@ -362,7 +363,7 @@ header{
   flex-direction: column;
   align-items: flex-start;
   gap:0.3rem;
-  padding:1rem 2rem;
+  padding:1rem 1rem;
   border-radius: 0.5rem;
 }
 
