feature remoção de borda e adição de altura no botão enviar no form da página contato

--- a/style.css
+++ b/style.css
@@ -263,7 +263,9 @@ header{
 .contato-formulario button{
   font-family: 'Poppins',sans-serif;
   font-weight: 700;
+  height: 2.5rem;
   background-color: #F6C34A;
+  border:0;
   padding: 0.5rem 4rem;
   border-radius: 0.1rem;
   align-self: stretch;
