refactor troca de propriedade height para min-height do container para deixar flexível o container e não estoure na hora de adicionar mais cards

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@ header{
 .area-adm-right-content{
   background-color: #F6C34A;
   width: 75vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 3rem 0;
   display:flex;
   flex-direction: column;
