--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header{
   display:flex;
   flex-direction: column;
   gap: 4rem;
-  padding:2rem 12rem 7rem 12rem;
+  padding:2rem 9rem 5rem 9rem;
 }
 
 .footer-top-content{
@@ -55,12 +55,14 @@ header{
 
 .footer-bottom-content{
   display:flex;
+  justify-content: space-between;
   gap:5rem;
 }
 
 .footer-endereco,
 .footer-links,
-.footer-redes-sociais{
+.footer-redes-sociais,
+.footer-area-restrita{
   display:flex;
   flex-direction: column;
   gap: 2rem;
@@ -71,7 +73,8 @@ header{
   margin-bottom: 0.5rem;
 }
 
-.footer-list-links{
+.footer-list-links,
+.footer-list-pocoes-area-adm{
   list-style: none;
   display:flex;
   flex-direction: column;
@@ -81,7 +84,7 @@ header{
 .footer-list-redes-sociais{
   height: 2rem;
   display:flex;
-  gap:1rem;
+  gap:0.5rem;
 }
 
 .footer-bottom-content img{
