feature criação do container principal da seção financeiro alunos na página area adm e implementação da interatividade para aparecer e sumir o layout quando solicitado pelo usuário

--- a/style.css
+++ b/style.css
@@ -572,3 +572,10 @@ header{
   font-family: 'Open Sans', sans-serif;
   font-size: 0.9rem;
 }
+
+
+/* Estilização do right-content da página de area-adm (conteúdo da direita) OPÇÃO FINANCEIRO ALUNOS*/
+.area-adm-main-financeiro-alunos{
+  display:none;
+  width: 100%;
+}
