--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ header{
 }
 
 .area-adm-financeiro-alunos-container{
-  padding: 0 15vw;
+  padding: 0 10vw;
   display:flex;
   gap:15vw;
   justify-content: center;
@@ -592,6 +592,49 @@ header{
   font-family: 'Poppins',sans-serif;
   display:flex;
   flex-direction: column;
-  width: 20vw;
+  width: 18vw;
   gap:0.2rem;
+}
+
+.area-adm-financeiro h2,
+.area-adm-relatorio-aluno h2{
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+
+.area-adm-financeiro label,
+.area-adm-relatorio-aluno label{
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+
+.area-adm-financeiro input,
+.area-adm-relatorio-aluno input{
+  font-size: 1.1rem;
+  font-weight: 400;
+  height: 2rem;
+  border: none;
+  border-radius: 0.3rem;
+}
+
+.area-adm-botao-financeiro{
+  font-family: 'Poppins',sans-serif;
+  font-weight: 700;
+  text-align: center;
+  background-color: #0E0E0E;
+  width: 100%;
+  color: #F0F0F0;
+  text-decoration: none;
+  padding: 0.5rem 0;
+  margin-top: 2rem;
+  border-radius: 0.3rem;
+}
+
+.adiciona-curso{
+  color:#0E0E0E;
+  font-size: 0.8rem;
+}
+
+.area-adm-financeiro p{
+  margin-bottom: 0.8rem;
 }
