--- a/style.css
+++ b/style.css
@@ -638,3 +638,14 @@ header{
 .area-adm-financeiro p{
   margin-bottom: 0.8rem;
 }
+
+.area-adm-relatorio-aluno-container{
+  display:flex;
+  flex-direction: column;
+  gap:3rem;
+}
+
+.area-adm-relatorio-aluno-encontrado{
+  font-family: 'Poppins',sans-serif;
+}
+
