fix correção de código que adicionava classes para alternar entre conteúdo turmas, matrículas e financeiro na página area adm, de usar setatribute, passei a usar classList remove e add

--- a/style.css
+++ b/style.css
@@ -412,22 +412,20 @@ header{
   color:#707070;
 }
 
-
-
 .layout-desativado{
-  display:none;
+  display:none !important;
 }
 
 .layout-ativado{
-  display:block;
+  display:block !important;
   width: 100%;
 }
 
-#link-desativado{
+.link-desativado{
   color:#707070;
 }
 
-#link-ativado{
+.link-ativado{
   color:#F0F0F0;
 }
 
