--- a/style.css
+++ b/style.css
@@ -409,6 +409,7 @@ header{
 }
 
 
+/* Classes para estilizar links e alternar visibilidade de layouts da area adm */
 #area-adm-turmas-link,
 #area-adm-matriculas-link,
 #area-adm-financeiro-link{
@@ -439,8 +440,6 @@ header{
 .link-ativado{
   color:#F0F0F0;
 }
-
-
 
 
 /* Estilização do right-content da página de area-adm (conteúdo da direita)*/
@@ -647,8 +646,6 @@ header{
 
 .area-adm-financeiro input,
 .area-adm-relatorio-aluno input{
-  font-size: 1.1rem;
-  font-weight: 400;
   height: 2rem;
   border: none;
   border-radius: 0.3rem;
@@ -684,5 +681,14 @@ header{
 
 .area-adm-relatorio-aluno-encontrado{
   font-family: 'Poppins',sans-serif;
+}
+
+/* Estiliza inputs da area adm das seções matricula e financeiro-alunos */
+.area-adm-matriculas-form input,
+.area-adm-financeiro input,
+.area-adm-relatorio-aluno input{
+  font-size: 0.9rem;
+  font-weight: 400;
+  padding:0 0.5rem;
 }
 
