--- a/style.css
+++ b/style.css
@@ -653,7 +653,7 @@ header{
   color: #F0F0F0;
   text-decoration: none;
   padding: 0.5rem 0;
-  margin-top: 2rem;
+  margin: 2rem 0;
   border-radius: 0.3rem;
 }
 
@@ -665,6 +665,7 @@ header{
 .area-adm-financeiro p{
   margin-bottom: 0.8rem;
 }
+
 
 .area-adm-relatorio-aluno-container{
   display:flex;
