feature adição de estilização da media query para o footer

--- a/style.css
+++ b/style.css
@@ -238,7 +238,12 @@ header{
   .footer-bottom-content{
     display:flex;
     flex-wrap: wrap;
+    align-self: center;
   }
+  .footer-endereco{
+    display:none;
+  }
+
 }
 
 
