--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ header{
   color: #0E0E0E;
   font-weight: 700;
   font-family: 'Poppins', sans-serif;
+  transition:0.8s;
+}
+
+.menu a:hover{
+  color:#F6C34A;
 }
 
 .menu-selected{
