feature adição de efeito underline com transition de esquerda para direita no hover dos links das páginas do site

--- a/style.css
+++ b/style.css
@@ -27,15 +27,35 @@ header{
 }
 
 .menu a{
+  display: inline-block;
+  position: relative;
   text-decoration: none;
   color: #0E0E0E;
   font-weight: 700;
   font-family: 'Poppins', sans-serif;
-  transition:0.8s;
+  transition:0.8s;  
 }
 
 .menu a:hover{
   color:#F6C34A;
+}
+
+.menu a::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color:#F6C34A;
+  transform-origin: bottom right;
+  transition: transform 0.5s ease-out;
+}
+
+.menu a:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 
 .menu-selected{
