feature adição de arquivo css para efeito fadein-out no carregamento das páginas, aplicação na página Home do site

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  animation: fadein 1s;
+}
+
 
 /* Estilização do header que será igual em todas as páginas */
 header{
