--- a/style.css
+++ b/style.css
@@ -18,8 +18,19 @@ header{
   justify-content: space-around;
 }
 
+.logo-container{
+  width: 20vw;
+  
+}
+
 .logo-container img{
-  width: 18vw;
+  width: 90%;
+  transition: 0.6s ease-out;
+  
+}
+
+.logo-container img:hover{
+  width: 19vw;
 }
 
 .menu{
