--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header{
   left: 0;
   background-color:#F6C34A;
   transform-origin: bottom;
-  transition: transform 0.35s ease-out;
+  transition: transform 0.35s ease-in;
 }
 
 .menu a:hover:after {
