--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ header{
   background-color: #0E0E0E;
   padding:2vh 3vw;
   border-radius: 0.3vw;
+  transition: 0.6s ease-in;
 }
 
 #botao-conheca-cursos:hover{
@@ -351,6 +352,7 @@ header{
   background-color: #0E0E0E;
   padding:1rem 5rem;
   border-radius: 0.3rem;
+  transition: 0.6s ease-in;
 }
 
 .botao-quero-fazer-parte:hover{
@@ -434,6 +436,7 @@ header{
   align-self: stretch;
   text-align: center;
   text-decoration: none;
+  transition: 0.6s ease-in;
 }
 
 .botao-enviar-contato,
@@ -571,6 +574,7 @@ header{
   align-items: center;  
   border-top-right-radius: 0.3rem;
   border-bottom-right-radius: 0.3rem;
+  transition: 0.6s ease-in;
 }
 
 .area-adm-botao-buscar:hover{
