feature adição do hover no icone de whatsapp com transition para movimento suave

--- a/style.css
+++ b/style.css
@@ -157,6 +157,11 @@ header{
   right: 3vw;
   width: 4rem;
   z-index: 1;
+  transition: 0.8s  ease-in-out;
+}
+
+.icone-whatsapp:hover{
+  width: 5rem;
 }
 
 
