feature adição de efeito fade quando o aluno é matriculado na area adm

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body,
-.area-adm-turmas-cards-container{
+.area-adm-turmas-cards-container,
+.area-adm-aluno-matriculado-container{
   animation: fadein 1s;
 }
 
