feature adição de efeito fade na aparição de aluno matriculado, aluno encontrado e simulação de parcela de cursos na area-adm

--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
 
 body,
 .area-adm-turmas-cards-container,
-.area-adm-aluno-matriculado-container{
+.area-adm-aluno-matriculado-container,
+.area-adm-main-matriculas,
+.area-adm-main-financeiro-alunos,
+.area-adm-relatorio-aluno-encontrado,
+.titulo-valor-financeiro,
+.valor-financeiro{
   animation: fadein 1s;
 }
 
