feat remoção de padding no media query do container de cards de descrição de cursos na parte superior da cursos page

--- a/style.css
+++ b/style.css
@@ -761,6 +761,7 @@ header {
   }
   /* CURSOS */
   .cursos-descricao-cards-container {
+    padding: 0;
     flex-wrap: wrap;
   }
   .cursos-card {
