--- a/style.css
+++ b/style.css
@@ -668,10 +668,10 @@ header {
 }
 
 .area-adm-financeiro-alunos-container {
-  padding: 0 10vw;
+  padding: 0 12vw;
   display: flex;
-  gap: 15vw;
-  justify-content: center;
+  gap: 2rem;
+  justify-content: space-between;
 }
 
 .area-adm-financeiro,
@@ -679,7 +679,7 @@ header {
   font-family: "Poppins", sans-serif;
   display: flex;
   flex-direction: column;
-  width: 18vw;
+  width: 15rem;
   gap: 0.2rem;
 }
 
@@ -802,5 +802,9 @@ header {
   }
   .area-adm-busca-turmas {
     width: 100%;
+  }
+  .area-adm-financeiro,
+  .area-adm-relatorio-aluno {
+    width: 18rem;
   }
 }
