--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ header {
   gap: 3vw;
 }
 
-.menu a {
+.menu a,
+.links-menu-burguer a {
   display: inline-block;
   position: relative;
   text-decoration: none;
@@ -60,11 +61,13 @@ header {
   transition: 0.8s;
 }
 
-.menu a:hover {
+.menu a:hover,
+.links-menu-burguer a:hover {
   color: #f6c34a;
 }
 
-.menu a::after {
+.menu a::after,
+.links-menu-burguer a::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -77,7 +80,7 @@ header {
   transition: transform 0.35s ease-in;
 }
 
-.menu a:hover:after {
+.menu a:hover:after ..links-menu-burguer a:hover:after {
   transform: scaleX(1);
   transform-origin: bottom;
 }
@@ -834,10 +837,19 @@ header {
     justify-content: space-between;
     padding: 0 6vw;
   }
+
+  .menu-burguer {
+    display: block;
+  }
   .menu {
     display: none;
   }
-  .menu-burguer {
-    display: block;
+  .links-menu-burguer {
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
   }
 }
