--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body,
 .area-adm-main-financeiro-alunos,
 .area-adm-relatorio-aluno-encontrado,
 .titulo-valor-financeiro,
-.valor-financeiro {
+.valor-financeiro,
+.links-menu-burguer {
   animation: fadein 1s;
 }
 
@@ -853,5 +854,7 @@ header {
     align-items: center;
     gap: 1rem;
     padding: 1rem;
+    transition: 0.6s ease-in-out;
+    transform-origin: bottom;
   }
 }
