--- a/style.css
+++ b/style.css
@@ -857,4 +857,22 @@ header {
     transition: 0.6s ease-in-out;
     transform-origin: bottom;
   }
+  /* FOOTER */
+  .footer-top-content {
+    text-align: center;
+  }
+
+  .footer-bottom-content {
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+  }
+
+  .footer-endereco,
+  .footer-links,
+  .footer-list-links,
+  .footer-redes-sociais,
+  .footer-area-restrita {
+    align-items: center;
+  }
 }
