feat adição de responsivo na home page para telas menores

--- a/style.css
+++ b/style.css
@@ -875,4 +875,13 @@ header {
   .footer-area-restrita {
     align-items: center;
   }
+
+  /* HOME PAGE */
+
+  #frase-top-content {
+    font-size: 1rem;
+  }
+  .depoimentos-card p {
+    text-align: center;
+  }
 }
